--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aitraining"
-version = "0.0.36"
+version = "0.0.37"
 description = "Advanced Machine Learning Training Platform - IN DEVELOPMENT"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -72,7 +72,7 @@ dependencies = [
     "hf-transfer",
 
     # Web framework (for API/app mode)
-    "fastapi==0.115.6",
+    "fastapi>=0.129.0",
     "starlette",
     "uvicorn==0.34.0",
     "python-multipart==0.0.20",
@@ -85,7 +85,7 @@ dependencies = [
     # Utilities
     "loguru==0.7.3",
     "requests==2.32.3",
-    "pydantic==2.10.4",
+    "pydantic>=2.12.5",
     "pyyaml==6.0.2",
     "tqdm==4.67.1",
     "joblib==1.4.2",
@@ -125,6 +125,9 @@ test = [
     "pytest-asyncio",
     "playwright>=1.40.0",
     "httpx>=0.25.0",
+]
+vllm = [
+    "vllm>=0.14.0",
 ]
 quality = [
     "black",
